--- a/config/gearwrench/default/core.entity_view_display.node.product_industry.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product_industry.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.product_industry.body
     - field.field.node.product_industry.field_industry
     - field.field.node.product_industry.field_media
+    - field.field.node.product_industry.field_meta_tags
     - node.type.product_industry
   module:
     - text
@@ -32,5 +33,6 @@ content:
 hidden:
   field_industry: true
   field_media: true
+  field_meta_tags: true
   langcode: true
   search_api_excerpt: true
