--- a/config/crescenttool/default/core.entity_form_display.node.product_brand.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.node.product_brand.default.yml
@@ -6,10 +6,12 @@ dependencies:
     - field.field.node.product_brand.body
     - field.field.node.product_brand.field_link
     - field.field.node.product_brand.field_media
+    - field.field.node.product_brand.field_meta_tags
     - node.type.product_brand
   module:
     - link
     - media_library
+    - metatag
     - path
     - text
 id: node.product_brand.default
@@ -47,6 +49,14 @@ content:
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 26
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   langcode:
     type: language_select
