--- a/config/crescenttool/default/core.entity_form_display.node.product_listing.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.node.product_listing.default.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.field.node.product_listing.body
     - field.field.node.product_listing.field_media
+    - field.field.node.product_listing.field_meta_tags
     - field.field.node.product_listing.field_product_classifications
     - node.type.product_listing
   module:
     - media_library
+    - metatag
     - path
     - text
 id: node.product_listing.default
@@ -38,6 +40,14 @@ content:
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 26
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   field_product_classifications:
     type: entity_reference_autocomplete
