--- a/config/crescenttool/default/core.entity_form_display.node.social_post.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.node.social_post.default.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.field.node.social_post.body
     - field.field.node.social_post.field_media
+    - field.field.node.social_post.field_meta_tags
     - field.field.node.social_post.field_post_url
     - node.type.social_post
   module:
     - media_library
+    - metatag
     - path
     - text
 id: node.social_post.default
@@ -38,6 +40,14 @@ content:
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 27
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   field_post_url:
     type: string_textfield
