--- a/config/crescenttool/default/core.entity_view_display.node.media_page.search_index.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.media_page.search_index.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
+    - field.field.node.media_page.field_meta_tags
     - field.field.node.media_page.field_preferred_listing_image
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
@@ -46,13 +47,10 @@ content:
       overlay: ''
       title: ''
       vanilla: false
-      icon: ''
       layout: ''
       view_mode: search_teaser
       cache: 0
-      current_view_mode: search_index
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -64,13 +62,16 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
-      breakpoints: {  }
-      sizes: ''
-      grid_header: ''
       grid: ''
       grid_medium: ''
       grid_small: ''
+      breakpoints: {  }
+      current_view_mode: search_index
+      fx: ''
+      icon: ''
+      sizes: ''
+      grid_header: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 0
     region: content
@@ -88,13 +89,10 @@ content:
       overlay: ''
       title: ''
       vanilla: false
-      icon: ''
       layout: ''
       view_mode: search_teaser
       cache: 0
-      current_view_mode: search_index
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -106,13 +104,16 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
-      breakpoints: {  }
-      sizes: ''
-      grid_header: ''
       grid: ''
       grid_medium: ''
       grid_small: ''
+      breakpoints: {  }
+      current_view_mode: search_index
+      fx: ''
+      icon: ''
+      sizes: ''
+      grid_header: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 1
     region: content
@@ -122,6 +123,7 @@ hidden:
   field_enable_download_link: true
   field_link: true
   field_media_type: true
+  field_meta_tags: true
   field_published_date: true
   field_tags: true
   langcode: true
