--- a/config/crescenttool/default/core.entity_view_display.node.product_brand.teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product_brand.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.product_brand.body
     - field.field.node.product_brand.field_link
     - field.field.node.product_brand.field_media
+    - field.field.node.product_brand.field_meta_tags
     - node.type.product_brand
   module:
     - text
@@ -32,6 +33,7 @@ content:
 hidden:
   field_link: true
   field_media: true
+  field_meta_tags: true
   langcode: true
   products_by_brand: true
   search_api_excerpt: true
