--- a/config/crescenttool/default/core.entity_view_display.node.product_listing.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product_listing.default.yml
@@ -5,15 +5,24 @@ dependencies:
   config:
     - field.field.node.product_listing.body
     - field.field.node.product_listing.field_media
+    - field.field.node.product_listing.field_meta_tags
     - field.field.node.product_listing.field_product_classifications
     - node.type.product_listing
   module:
+    - metatag
     - user
 id: node.product_listing.default
 targetEntityType: node
 bundle: product_listing
 mode: default
-content: {  }
+content:
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
 hidden:
   body: true
   field_media: true
