--- a/config/crescenttool/default/core.entity_view_display.node.product_listing.teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product_listing.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.product_listing.body
     - field.field.node.product_listing.field_media
+    - field.field.node.product_listing.field_meta_tags
     - field.field.node.product_listing.field_product_classifications
     - node.type.product_listing
   module:
@@ -31,6 +32,7 @@ content:
     region: content
 hidden:
   field_media: true
+  field_meta_tags: true
   field_product_classifications: true
   langcode: true
   search_api_excerpt: true
