--- a/config/crescenttool/default/core.entity_view_display.node.product_trade.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product_trade.full.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.full
     - field.field.node.product_trade.body
     - field.field.node.product_trade.field_media
+    - field.field.node.product_trade.field_meta_tags
     - field.field.node.product_trade.field_trade
     - node.type.product_trade
     - responsive_image.styles.short_hero
@@ -39,13 +40,10 @@ content:
       overlay: ''
       title: ''
       vanilla: false
-      icon: ''
       layout: ''
       view_mode: default
       cache: 0
-      current_view_mode: full
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -57,17 +55,21 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
-      breakpoints: {  }
-      sizes: ''
-      grid_header: ''
       grid: ''
       grid_medium: ''
       grid_small: ''
+      breakpoints: {  }
+      current_view_mode: full
+      fx: ''
+      icon: ''
+      sizes: ''
+      grid_header: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 1
     region: content
 hidden:
+  field_meta_tags: true
   field_trade: true
   langcode: true
   links: true
