--- a/config/crescenttool/default/core.entity_view_display.node.product_trade.teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product_trade.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.product_trade.body
     - field.field.node.product_trade.field_media
+    - field.field.node.product_trade.field_meta_tags
     - field.field.node.product_trade.field_trade
     - node.type.product_trade
   module:
@@ -31,6 +32,7 @@ content:
     region: content
 hidden:
   field_media: true
+  field_meta_tags: true
   field_trade: true
   langcode: true
   search_api_excerpt: true
