--- a/config/crescenttool/default/core.entity_view_display.taxonomy_term.product_classifications.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.taxonomy_term.product_classifications.default.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.product_classifications.field_classification_id
+    - field.field.taxonomy_term.product_classifications.field_meta_tags
     - taxonomy.vocabulary.product_classifications
   module:
+    - metatag
     - text
 id: taxonomy_term.product_classifications.default
 targetEntityType: taxonomy_term
@@ -26,6 +28,13 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
     region: content
 hidden:
   langcode: true
