--- a/config/crescenttool/default/core.extension.yml
+++ b/config/crescenttool/default/core.extension.yml
@@ -93,6 +93,7 @@ module:
   metatag_open_graph: 0
   metatag_twitter_cards: 0
   metatag_verification: 0
+  metatag_import: 0
   migrate: 0
   migrate_plus: 0
   migrate_tools: 0
