--- a/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.block_title.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
+    - field.field.node.media_page.field_meta_tags
     - field.field.node.media_page.field_preferred_listing_image
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
@@ -95,6 +96,7 @@ content:
 hidden:
   field_category: true
   field_enable_download_link: true
+  field_meta_tags: true
   field_preferred_listing_image: true
   langcode: true
   search_api_excerpt: true
