--- a/config/gearwrench/default/core.entity_view_display.node.media_page.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.media_page.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.media_page.field_link
     - field.field.node.media_page.field_media
     - field.field.node.media_page.field_media_type
+    - field.field.node.media_page.field_meta_tags
     - field.field.node.media_page.field_preferred_listing_image
     - field.field.node.media_page.field_published_date
     - field.field.node.media_page.field_tags
@@ -18,6 +19,7 @@ dependencies:
     - datetime
     - entity_reference_revisions
     - link
+    - metatag
     - options
     - text
     - user
@@ -86,6 +88,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 107
+    region: content
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 113
     region: content
   field_preferred_listing_image:
     type: entity_reference_entity_view
