--- a/config/gearwrench/default/core.entity_view_display.node.product_industry.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product_industry.default.yml
@@ -6,14 +6,23 @@ dependencies:
     - field.field.node.product_industry.body
     - field.field.node.product_industry.field_industry
     - field.field.node.product_industry.field_media
+    - field.field.node.product_industry.field_meta_tags
     - node.type.product_industry
   module:
+    - metatag
     - user
 id: node.product_industry.default
 targetEntityType: node
 bundle: product_industry
 mode: default
-content: {  }
+content:
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
 hidden:
   body: true
   field_industry: true
