--- a/config/gearwrench/default/core.entity_view_display.node.social_post.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.social_post.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.social_post.body
     - field.field.node.social_post.field_media
+    - field.field.node.social_post.field_meta_tags
     - field.field.node.social_post.field_post_url
     - node.type.social_post
   module:
@@ -53,6 +54,7 @@ content:
     weight: 2
     region: content
 hidden:
+  field_meta_tags: true
   langcode: true
   links: true
   search_api_excerpt: true
