APEX-475: GTM added in config ignore.

--- a/config/campbell/default/config_ignore.settings.yml
+++ b/config/campbell/default/config_ignore.settings.yml
@@ -4,3 +4,4 @@ ignored_config_entities:
   - 'block.block.custom_*'
   - system.site
   - google_tag.container.google_tag_manager
+  - google_tag.container.gtm_container
