APEX-334: Contact form link color added and removed link form image on news listing

--- a/config/campbell/default/views.view.campbell_news.yml
+++ b/config/campbell/default/views.view.campbell_news.yml
@@ -1280,7 +1280,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_view
           settings:
-            view_mode: default
+            view_mode: embed
           group_column: target_id
           group_columns: {  }
           group_rows: true
