APS-77 Refactor code, Fix the Batch operations & Store old meta data to content if new meta data is empty

--- a/docroot/modules/custom/metatag_import/metatag_import.info.yml
+++ b/docroot/modules/custom/metatag_import/metatag_import.info.yml
@@ -1,5 +1,5 @@
-name: Metatag Import
+name: APEX Metatag Import
 type: module
-description: Importing metatag from non-pim data
-package: custom
+description: APEX Import Meta Data (Title & Desc) for Non-PIM Content
+package: apex
 core_version_requirement: ^8 || ^9
