--- a/docroot/modules/custom/metatag_import/metatag_import.links.menu.yml
+++ b/docroot/modules/custom/metatag_import/metatag_import.links.menu.yml
@@ -1,5 +1,5 @@
 metatag_import.non_pim:
-  title: Import Non-Pim Data
+  title: APEX Metatag Import
   parent: system.admin_config_development
   route_name: metatag_import.non_pim
   weight: 10
