--- a/docroot/modules/custom/metatag_import/metatag_import.routing.yml
+++ b/docroot/modules/custom/metatag_import/metatag_import.routing.yml
@@ -1,7 +1,7 @@
 metatag_import.non_pim:
-  path: '/admin/config/development/non-pim-import'
+  path: '/admin/config/development/metatag-import-non-pim-data'
   defaults:
-    _title: 'Non-PIM Upload Data'
+    _title: 'APEX Import Meta Data (Title & Desc) for Non-PIM Content'
     _form: '\Drupal\metatag_import\Form\ImportMetaData'
   requirements:
-    _permission: 'Import form'
+    _permission: 'access administration pages'
