--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media_gb.yml
@@ -86,6 +86,12 @@ process:
     media_type: image
     level: asset
     notification_logfile: public://import/pim_data/logs/product_media_notification_gb.txt
+    # Asset Media icon mapping.
+    process_map_media_icon: 1
+    map_media_migration_id: cleco_product_media
+    map_media_config:
+      STP File: controller_stp_file_gb
+      IGS File: controller_igs_file_gb
     process_params:
       bundle: product_downloads
       source: bundle
