APEX-496:Added asset mapping.

--- a/config/clecotools/default/migrate_plus.migration.cleco_product_media_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_media_gb.yml
@@ -98,7 +98,7 @@ process:
     level: asset
     notification_logfile: 'public://import/pim_data/logs/product_media_notification_gb.txt'
     process_map_media_icon: 1
-    map_media_migration_id: cleco_product_media
+    map_media_migration_id: cleco_product_media_gb
     map_media_config:
       'STP File': controller_stp_file_gb
       'IGS File': controller_igs_file_gb
