--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media_de.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_media_de.yml
@@ -88,7 +88,7 @@ process:
     notification_logfile: public://import/pim_data/logs/product_media_notification_de.txt
     # Asset Media icon mapping.
     process_map_media_icon: 1
-    map_media_migration_id: cleco_product_media
+    map_media_migration_id: cleco_product_media_de
     map_media_config:
       STP File: controller_stp_file_de
       IGS File: controller_igs_file_de
