--- a/config/gearwrench/default/core.entity_form_display.media.remote_video.media_library.yml
+++ b/config/gearwrench/default/core.entity_form_display.media.remote_video.media_library.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_form_mode.media.media_library
     - field.field.media.remote_video.field_media_oembed_video
     - field.field.media.remote_video.field_media_video_embed_field
+    - field.field.media.remote_video.field_meta_tags
     - media.type.remote_video
   module:
     - video_embed_field
@@ -32,6 +33,7 @@ content:
 hidden:
   created: true
   field_media_oembed_video: true
+  field_meta_tags: true
   name: true
   path: true
   status: true
