--- a/config/gearwrench/default/core.entity_form_display.media.video.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.media.video.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.media.video.field_media_video_file
+    - field.field.media.video.field_meta_tags
     - media.type.video
   module:
     - file
+    - metatag
     - path
 _core:
   default_config_hash: bZEk64pIqAPKR5XDlwebNABi9hHDAPp20TDdtHnh3PE
@@ -27,6 +29,14 @@ content:
     region: content
     settings:
       progress_indicator: throbber
+    third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 101
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   langcode:
     type: language_select
