--- a/config/gearwrench/default/core.entity_view_display.media.audio.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.audio.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.media.audio.field_media_audio_file
+    - field.field.media.audio.field_meta_tags
     - media.type.audio
   module:
     - file
+    - metatag
 _core:
   default_config_hash: SWf3MLdbEKvlx4Vs6iPwDHu5pr1aKT0SJmgp8no73-k
 id: media.audio.default
@@ -24,6 +26,13 @@ content:
       multiple_file_display_type: tags
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
   created: true
