--- a/config/gearwrench/default/core.entity_form_display.media.audio.media_library.yml
+++ b/config/gearwrench/default/core.entity_form_display.media.audio.media_library.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_form_mode.media.media_library
     - field.field.media.audio.field_media_audio_file
+    - field.field.media.audio.field_meta_tags
     - media.type.audio
 _core:
   default_config_hash: 9XTn4CqOB0W8nLo5kOOaNqJAP63e2yQEzMtKttPrlVw
@@ -31,6 +32,7 @@ content:
 hidden:
   created: true
   field_media_audio_file: true
+  field_meta_tags: true
   path: true
   status: true
   uid: true
