--- a/config/gearwrench/default/core.entity_form_display.media.file.media_library.yml
+++ b/config/gearwrench/default/core.entity_form_display.media.file.media_library.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_form_mode.media.media_library
     - field.field.media.file.field_media_file
+    - field.field.media.file.field_meta_tags
     - media.type.file
 _core:
   default_config_hash: RFmywOcuem167havmD4VLgBTO1Swq9hyA-_f5aYTi8c
@@ -31,6 +32,7 @@ content:
 hidden:
   created: true
   field_media_file: true
+  field_meta_tags: true
   path: true
   status: true
   uid: true
