--- a/config/gearwrench/default/core.entity_form_display.media.image.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.media.image.default.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.media.image.field_media_image
+    - field.field.media.image.field_meta_tags
     - image.style.thumbnail
     - media.type.image
   module:
     - focal_point
+    - metatag
     - path
 _core:
   default_config_hash: oP3hKA47KSVZUewmuwJHQWM2FErYgd48oWJFstkikgU
@@ -31,6 +33,14 @@ content:
       preview_image_style: thumbnail
       preview_link: true
       offsets: '50,50'
+    third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 101
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   langcode:
     type: language_select
