--- a/config/gearwrench/default/core.entity_view_display.media.audio.embed.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.audio.embed.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.embed
     - field.field.media.audio.field_media_audio_file
+    - field.field.media.audio.field_meta_tags
     - media.type.audio
   module:
     - file
@@ -28,6 +29,7 @@ content:
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
