--- a/config/gearwrench/default/core.entity_view_display.media.file.embed.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.file.embed.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.embed
     - field.field.media.file.field_media_file
+    - field.field.media.file.field_meta_tags
     - media.type.file
   module:
     - file
@@ -25,6 +26,7 @@ content:
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
