--- a/config/gearwrench/default/core.entity_view_display.media.file.media_library.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.file.media_library.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.media_library
     - field.field.media.file.field_media_file
+    - field.field.media.file.field_meta_tags
     - image.style.thumbnail
     - media.type.file
   module:
@@ -30,6 +31,7 @@ content:
 hidden:
   created: true
   field_media_file: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
