--- a/config/gearwrench/default/core.entity_view_display.media.image.embed_slider.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.image.embed_slider.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.embed_slider
     - field.field.media.image.field_media_image
+    - field.field.media.image.field_meta_tags
     - image.style.medium
     - media.type.image
   module:
@@ -24,11 +25,9 @@ content:
         title: '0'
         alt: '0'
       optionset: default
-      icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      current_view_mode: embed_slider
       skin: ''
       style: ''
       background: false
@@ -41,6 +40,9 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
       breakpoints:
         xs:
           breakpoint: ''
@@ -62,17 +64,17 @@ content:
           breakpoint: ''
           width: ''
           image_style: ''
+      current_view_mode: embed_slider
+      icon: ''
       sizes: ''
       grid_header: ''
-      grid: '0'
-      grid_medium: '0'
-      grid_small: '0'
       iframe_lazy: true
     third_party_settings: {  }
     weight: 1
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
