--- a/config/gearwrench/default/core.entity_view_display.media.image.product_detail_slider.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.image.product_detail_slider.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.product_detail_slider
     - field.field.media.image.field_media_image
+    - field.field.media.image.field_meta_tags
     - image.style.product_medium
     - media.type.image
   module:
@@ -23,13 +24,10 @@ content:
       caption:
         title: '0'
         alt: '0'
-      icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      current_view_mode: product_detail_slider
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -41,18 +39,22 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
-      breakpoints: {  }
-      sizes: ''
-      grid_header: ''
       grid: '0'
       grid_medium: '0'
       grid_small: '0'
+      breakpoints: {  }
+      current_view_mode: product_detail_slider
+      fx: ''
+      icon: ''
+      sizes: ''
+      grid_header: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 1
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
