--- a/config/gearwrench/default/core.entity_view_display.media.remote_video.modal.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.remote_video.modal.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.media.modal
     - field.field.media.remote_video.field_media_oembed_video
     - field.field.media.remote_video.field_media_video_embed_field
+    - field.field.media.remote_video.field_meta_tags
     - media.type.remote_video
   module:
     - media_video_micromodal
@@ -30,6 +31,7 @@ hidden:
   created: true
   field_media_oembed_video: true
   field_media_video_embed_field: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
