--- a/config/gearwrench/default/core.entity_view_display.media.remote_video.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.remote_video.search_index.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.media.search_index
     - field.field.media.remote_video.field_media_oembed_video
     - field.field.media.remote_video.field_media_video_embed_field
+    - field.field.media.remote_video.field_meta_tags
     - image.style.search_teaser_261x256
     - media.type.remote_video
   module:
@@ -24,13 +25,10 @@ content:
       caption:
         title: '0'
         alt: '0'
-      icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      current_view_mode: search_index
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -42,13 +40,16 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
-      breakpoints: {  }
-      sizes: ''
-      grid_header: ''
       grid: '0'
       grid_medium: '0'
       grid_small: '0'
+      breakpoints: {  }
+      current_view_mode: search_index
+      fx: ''
+      icon: ''
+      sizes: ''
+      grid_header: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 0
     region: content
@@ -56,6 +57,7 @@ hidden:
   created: true
   field_media_oembed_video: true
   field_media_video_embed_field: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
