--- a/config/gearwrench/default/core.entity_view_display.media.remote_video.search_teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.remote_video.search_teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.media.search_teaser
     - field.field.media.remote_video.field_media_oembed_video
     - field.field.media.remote_video.field_media_video_embed_field
+    - field.field.media.remote_video.field_meta_tags
     - image.style.search_teaser_261x256
     - media.type.remote_video
   module:
@@ -29,6 +30,7 @@ content:
 hidden:
   created: true
   field_media_oembed_video: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
