--- a/config/crescenttool/default/core.entity_view_display.media.image.teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.image.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.teaser
     - field.field.media.image.field_media_image
+    - field.field.media.image.field_meta_tags
     - image.style.small_1x1
     - media.type.image
   module:
@@ -21,13 +22,10 @@ content:
       caption:
         title: '0'
         alt: '0'
-      icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      current_view_mode: teaser
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -39,18 +37,22 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
-      breakpoints: {  }
-      sizes: ''
-      grid_header: ''
       grid: ''
       grid_medium: ''
       grid_small: ''
+      breakpoints: {  }
+      current_view_mode: teaser
+      fx: ''
+      icon: ''
+      sizes: ''
+      grid_header: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 1
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
