--- a/config/crescenttool/default/core.entity_view_display.media.video.embed_grid.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.video.embed_grid.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.embed_grid
     - field.field.media.video.field_media_video_file
+    - field.field.media.video.field_meta_tags
     - media.type.video
   module:
     - file
@@ -29,6 +30,7 @@ content:
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
