--- a/config/crescenttool/default/core.entity_form_display.media.file.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.media.file.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.media.file.field_media_file
+    - field.field.media.file.field_meta_tags
     - media.type.file
   module:
     - file
+    - metatag
     - path
 id: media.file.default
 targetEntityType: media
@@ -25,6 +27,14 @@ content:
     region: content
     settings:
       progress_indicator: throbber
+    third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 101
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   langcode:
     type: language_select
