--- a/config/crescenttool/default/core.entity_form_display.media.video.media_library.yml
+++ b/config/crescenttool/default/core.entity_form_display.media.video.media_library.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_form_mode.media.media_library
     - field.field.media.video.field_media_video_file
+    - field.field.media.video.field_meta_tags
     - media.type.video
 id: media.video.media_library
 targetEntityType: media
@@ -29,6 +30,7 @@ content:
 hidden:
   created: true
   field_media_video_file: true
+  field_meta_tags: true
   path: true
   status: true
   uid: true
