--- a/config/crescenttool/default/core.entity_view_display.media.file.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.file.full.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.full
     - field.field.media.file.field_media_file
+    - field.field.media.file.field_meta_tags
     - media.type.file
   module:
     - file
@@ -22,6 +23,7 @@ content:
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
