--- a/config/crescenttool/default/core.entity_view_display.media.file.search_teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.file.search_teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.search_teaser
     - field.field.media.file.field_media_file
+    - field.field.media.file.field_meta_tags
     - media.type.file
   module:
     - file
@@ -23,6 +24,7 @@ content:
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
