--- a/config/crescenttool/default/core.entity_view_display.media.image.embed_slider.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.image.embed_slider.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.embed_slider
     - field.field.media.image.field_media_image
+    - field.field.media.image.field_meta_tags
     - image.style.medium
     - media.type.image
   module:
@@ -21,13 +22,10 @@ content:
       caption:
         title: '0'
         alt: '0'
-      icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      current_view_mode: embed_slider
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -39,7 +37,9 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
       breakpoints:
         xs:
           breakpoint: ''
@@ -61,16 +61,18 @@ content:
           breakpoint: ''
           width: ''
           image_style: ''
+      current_view_mode: embed_slider
+      fx: ''
+      icon: ''
       sizes: ''
       grid_header: ''
-      grid: ''
-      grid_medium: ''
-      grid_small: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 1
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
