--- a/config/crescenttool/default/core.entity_view_display.media.image.hero.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.image.hero.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.hero
     - field.field.media.image.field_media_image
+    - field.field.media.image.field_meta_tags
     - media.type.image
     - responsive_image.styles.hero
   module:
@@ -25,6 +26,7 @@ content:
     region: content
 hidden:
   created: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
