--- a/config/crescenttool/default/core.entity_view_display.media.image.media_library.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.image.media_library.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.media_library
     - field.field.media.image.field_media_image
+    - field.field.media.image.field_meta_tags
     - image.style.medium
     - media.type.image
   module:
@@ -28,6 +29,7 @@ content:
 hidden:
   created: true
   field_media_image: true
+  field_meta_tags: true
   langcode: true
   name: true
   search_api_excerpt: true
