--- a/config/crescenttool/default/core.entity_view_display.media.video.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.video.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.media.video.field_media_video_file
+    - field.field.media.video.field_meta_tags
     - media.type.video
   module:
     - file
+    - metatag
 id: media.video.default
 targetEntityType: media
 bundle: video
@@ -25,6 +27,13 @@ content:
       height: 480
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
   created: true
