--- a/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.routing.yml
+++ b/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.routing.yml
@@ -9,7 +9,7 @@ actions.step.api.filter.products:
 actions.step.api.filter.downloads:
   path: /actions/step/api/filter/downloads
   defaults:
-    _controller: '\Drupal\cleco_vuejs\Controller\ApiController::actionSearchDownloads'
+    _controller: '\Drupal\cleco_vuejs\Controller\ApiController::actionFilterDownloads'
   requirements:
     _permission: 'access content'
 
