--- a/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.services.yml
+++ b/docroot/sites/clecotools/modules/custom/cleco_vuejs/cleco_vuejs.services.yml
@@ -36,3 +36,5 @@ services:
 
   cleco_vuejs.vue_data_formatter:
     class: Drupal\cleco_vuejs\Services\VueDataFormatter
+    arguments:
+      - '@entity_type.manager'
