APS-99 fixed-type-navigator-issue

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -212,6 +212,13 @@ node--full--page:
   css:
     component:
       css/libraries/node/full--page.css: {}
+  js:
+    js/libraries/node/full--page.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - gearwrench/library--jquery-roving-tabindex
 
 node--full--product:
   version: 1.x
