APEX-400:Added specification key changes.

--- a/config/clecotools/default/migrate_plus.migration.cleco_products.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products.yml
@@ -1,9 +1,7 @@
-uuid: 1882246c-a40b-4d8b-919e-879af02b0d31
+uuid: 64171c17-b1ab-45c1-8e53-a46ff0f80644
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: es-UCmmo9t6W35PdIgJyNoU03SXtaaQmteryONmLdFI
 id: cleco_products
 class: null
 field_plugin_method: null
@@ -98,7 +96,7 @@ process:
   type:
     plugin: default_value
     default_value: product
-  title: remote_name
+  title: remote_sku
   sticky: constants/bool_0
   promote: constants/bool_1
   uid: constants/uid_root
