--- a/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
@@ -1,9 +1,7 @@
-uuid: e6cf9a5d-ea2f-4465-800f-7646bc301fd2
+uuid: 4cdc679f-a96e-4876-a702-c6c97ebce75f
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: BddF0o-TXs0bukPCT0XnEOrzitwIED8HJkBZYOMi9-k
 id: cleco_products_de
 class: null
 field_plugin_method: null
@@ -98,7 +96,7 @@ process:
   type:
     plugin: default_value
     default_value: product
-  title: remote_name
+  title: remote_sku
   sticky: constants/bool_0
   promote: constants/bool_1
   uid: constants/uid_root
