--- a/config/clecotools/default/migrate_plus.migration.cleco_products_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_gb.yml
@@ -1,9 +1,7 @@
-uuid: e77cf9b7-d943-4464-8978-884a96eb511c
+uuid: 3468561a-7cf8-4aa3-894e-c169af7364e0
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: 0bhjh_Zn_jVp4zXhR7dVgAHaxr-R4__YrX1TXfDbU2U
 id: cleco_products_gb
 class: null
 field_plugin_method: null
@@ -98,7 +96,7 @@ process:
   type:
     plugin: default_value
     default_value: product
-  title: remote_name
+  title: remote_sku
   sticky: constants/bool_0
   promote: constants/bool_1
   uid: constants/uid_root
