--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products.yml
@@ -74,7 +74,7 @@ process:
   type:
     plugin: default_value
     default_value: product
-  title: remote_name
+  title: remote_sku
   sticky: constants/bool_0
   promote: constants/bool_1
   uid: constants/uid_root
